--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,17 +6,39 @@ sonar.projectVersion=1.0
 # Diretório base do código fonte
 sonar.sources=.
 
-# Linguagens (opcional, mas bom definir)
+# Especificar linguagens explicitamente
 sonar.language=js
 
-# Ignorar arquivos/pastas
-sonar.exclusions=**/node_modules/**,**/*.log,front-end/styles.css
+# Ignorar arquivos/pastas desnecessários
+sonar.exclusions=**/node_modules/**,**/*.log,**/*.md,**/*.txt,**/*.json,front-end/styles.css,**/.git/**,**/dist/**,**/build/**
 
-# URL do SonarQube
-sonar.host.url=http://201.23.3.86:9000
+# Incluir apenas arquivos de código fonte
+sonar.inclusions=**/*.js,**/*.html,**/*.css
 
-# Token de autenticação
-sonar.login=SEU_TOKEN_GERADO_AQUI
+# URL do SonarQube (será sobrescrita pelo workflow)
+sonar.host.url=http://localhost:9000
+
+# Token de autenticação (será sobrescrito pelo workflow)
+sonar.login=your-token-here
 
 # Codificação dos arquivos fonte
 sonar.sourceEncoding=UTF-8
+
+# Configurações de qualidade
+sonar.qualitygate.wait=true
+sonar.qualitygate.timeout=300
+
+# Configurações de SCM
+sonar.scm.provider=git
+sonar.scm.forceReloadAll=false
+
+# Configurações de JavaScript/Node.js
+sonar.javascript.lcov.reportPaths=**/coverage/lcov.info
+sonar.javascript.exclusions=**/node_modules/**,**/vendor/**
+
+# Desabilitar regras muito rígidas para projetos pequenos
+sonar.issue.ignore.multicriteria=e1,e2
+sonar.issue.ignore.multicriteria.e1.ruleKey=javascript:S1481
+sonar.issue.ignore.multicriteria.e1.resourceKey=**/*.js
+sonar.issue.ignore.multicriteria.e2.ruleKey=javascript:S125
+sonar.issue.ignore.multicriteria.e2.resourceKey=**/*.js
