--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,13 +6,10 @@ sonar.projectVersion=1.0
 # Diretório base do código fonte
 sonar.sources=.
 
-# Especificar linguagens explicitamente
-sonar.language=js
+# Ignorar arquivos/pastas desnecessários (mais abrangente)
+sonar.exclusions=**/node_modules/**,**/*.log,**/*.md,**/*.txt,**/*.json,**/.git/**,**/dist/**,**/build/**,**/coverage/**,**/*.min.js,**/*.bundle.js
 
-# Ignorar arquivos/pastas desnecessários
-sonar.exclusions=**/node_modules/**,**/*.log,**/*.md,**/*.txt,**/*.json,front-end/styles.css,**/.git/**,**/dist/**,**/build/**
-
-# Incluir apenas arquivos de código fonte
+# Incluir apenas arquivos de código fonte relevantes
 sonar.inclusions=**/*.js,**/*.html,**/*.css
 
 # URL do SonarQube (será sobrescrita pelo workflow)
@@ -24,21 +21,30 @@ sonar.login=your-token-here
 # Codificação dos arquivos fonte
 sonar.sourceEncoding=UTF-8
 
-# Configurações de qualidade
-sonar.qualitygate.wait=true
-sonar.qualitygate.timeout=300
+# Configurações de qualidade mais flexíveis
+sonar.qualitygate.wait=false
 
 # Configurações de SCM
 sonar.scm.provider=git
 sonar.scm.forceReloadAll=false
 
-# Configurações de JavaScript/Node.js
+# Configurações específicas para JavaScript
 sonar.javascript.lcov.reportPaths=**/coverage/lcov.info
-sonar.javascript.exclusions=**/node_modules/**,**/vendor/**
+sonar.javascript.exclusions=**/node_modules/**,**/vendor/**,**/*.min.js
 
 # Desabilitar regras muito rígidas para projetos pequenos
-sonar.issue.ignore.multicriteria=e1,e2
+sonar.issue.ignore.multicriteria=e1,e2,e3,e4
 sonar.issue.ignore.multicriteria.e1.ruleKey=javascript:S1481
 sonar.issue.ignore.multicriteria.e1.resourceKey=**/*.js
 sonar.issue.ignore.multicriteria.e2.ruleKey=javascript:S125
 sonar.issue.ignore.multicriteria.e2.resourceKey=**/*.js
+sonar.issue.ignore.multicriteria.e3.ruleKey=javascript:S3776
+sonar.issue.ignore.multicriteria.e3.resourceKey=**/*.js
+sonar.issue.ignore.multicriteria.e4.ruleKey=javascript:S1192
+sonar.issue.ignore.multicriteria.e4.resourceKey=**/*.js
+
+# Configurações para reduzir falsos positivos
+sonar.javascript.globals=window,document,console,require,module,exports,process,global,Buffer,__dirname,__filename
+
+# Configurações de timeout mais flexíveis
+sonar.ws.timeout=300
