--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,7 +44,7 @@ jobs:
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -H ${{ secrets.SERVER_HOST }} >> ~/.ssh/known_hosts
 
-      - name: Encontrar porta livre e iniciar SonarQube
+      - name: Preparar ambiente e iniciar SonarQube
         run: |
           ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} << 'EOF'
             # Função para encontrar porta livre
@@ -58,79 +58,135 @@ jobs:
               echo "9000" # fallback
             }
 
-            # Parar qualquer SonarQube que possa estar rodando
-            echo "Limpando containers SonarQube existentes..."
+            # Limpeza completa de containers e volumes anteriores
+            echo "=== LIMPEZA INICIAL ==="
             docker stop $(docker ps -q --filter "name=sonar") 2>/dev/null || true
             docker rm $(docker ps -aq --filter "name=sonar") 2>/dev/null || true
             docker volume rm sonarqube_temp_data sonarqube_temp_logs sonarqube_temp_extensions 2>/dev/null || true
+            docker system prune -f --volumes 2>/dev/null || true
 
             # Encontrar porta livre
             SONAR_PORT=$(find_free_port)
             echo "Usando porta: $SONAR_PORT"
             echo "SONAR_PORT=$SONAR_PORT" > /tmp/sonar_port.env
 
-            # Verificar o que está usando as portas
-            echo "=== PORTAS EM USO ==="
-            netstat -tulpn | grep -E ":(9000|9001|9002|9003)" || echo "Nenhuma porta 90xx em uso"
+            # Configurar limites do sistema OBRIGATÓRIOS
+            echo "=== CONFIGURAÇÃO DO SISTEMA ==="
+            sudo sysctl -w vm.max_map_count=262144
+            sudo sysctl -w fs.file-max=65536
+            echo "vm.max_map_count=262144" | sudo tee -a /etc/sysctl.conf
+            echo "fs.file-max=65536" | sudo tee -a /etc/sysctl.conf
 
-            # Configurar limits do sistema
-            echo "Configurando limites do sistema..."
-            sudo sysctl -w vm.max_map_count=262144 2>/dev/null || echo "Aviso: vm.max_map_count não configurado"
+            # Verificar recursos disponíveis
+            echo "=== RECURSOS DO SISTEMA ==="
+            echo "Memória disponível:"
+            free -h
+            echo "Espaço em disco:"
+            df -h
+            echo "Limites atuais:"
+            ulimit -a | grep -E "(open files|processes)"
 
-            # Iniciar SonarQube na porta encontrada
-            echo "Iniciando SonarQube na porta $SONAR_PORT..."
-            docker run -d --name sonarqube-temp -p $SONAR_PORT:9000 \
+            # Criar volumes com permissões corretas
+            echo "=== CRIANDO VOLUMES ==="
+            docker volume create sonarqube_temp_data
+            docker volume create sonarqube_temp_logs  
+            docker volume create sonarqube_temp_extensions
+
+            # Iniciar SonarQube com configurações otimizadas
+            echo "=== INICIANDO SONARQUBE ==="
+            docker run -d --name sonarqube-temp \
+              -p $SONAR_PORT:9000 \
               -e SONAR_ES_BOOTSTRAP_CHECKS_DISABLE=true \
-              -e SONAR_WEB_JAVAADDITIONALOPTS="-Xmx1536m -Xms512m -XX:+UseG1GC" \
-              -e SONAR_CE_JAVAADDITIONALOPTS="-Xmx1024m -Xms512m -XX:+UseG1GC" \
-              -e SONAR_SEARCH_JAVAADDITIONALOPTS="-Xmx1024m -Xms512m -XX:+UseG1GC" \
+              -e SONAR_SEARCH_JAVAADDITIONALOPTS="-Xms512m -Xmx1024m -XX:MaxDirectMemorySize=256m" \
+              -e SONAR_WEB_JAVAADDITIONALOPTS="-Xms1024m -Xmx2048m -XX:+UseG1GC" \
+              -e SONAR_CE_JAVAADDITIONALOPTS="-Xms512m -Xmx1024m -XX:+UseG1GC" \
+              -e ES_JAVA_OPTS="-Xms512m -Xmx1024m" \
+              -e SONAR_JDBC_URL="jdbc:h2:tcp://localhost/sonar" \
               -v sonarqube_temp_data:/opt/sonarqube/data \
               -v sonarqube_temp_logs:/opt/sonarqube/logs \
               -v sonarqube_temp_extensions:/opt/sonarqube/extensions \
-              --memory=3g \
-              --memory-swap=3g \
+              --memory=4g \
+              --memory-swap=4g \
+              --memory-swappiness=1 \
               --oom-kill-disable=false \
               --ulimit nofile=65536:65536 \
               --ulimit nproc=4096:4096 \
-              sonarqube:lts-community
+              --ulimit memlock=-1:-1 \
+              --security-opt seccomp=unconfined \
+              sonarqube:9.9-community
 
             if [ $? -ne 0 ]; then
               echo "❌ Falha ao iniciar container SonarQube"
               exit 1
             fi
 
-            # Aguardar SonarQube iniciar
-            echo "Aguardando SonarQube iniciar na porta $SONAR_PORT..."
-            TIMEOUT=120
+            echo "Container iniciado, aguardando logs iniciais..."
+            sleep 10
+            docker logs sonarqube-temp --tail 20
+
+            # Aguardar SonarQube iniciar com timeout maior
+            echo "=== AGUARDANDO SONARQUBE ==="
+            TIMEOUT=300
             for i in $(seq 1 $TIMEOUT); do
               # Verificar se container está rodando
               if ! docker ps | grep -q sonarqube-temp; then
                 echo "❌ Container parou de funcionar!"
-                docker logs sonarqube-temp --tail 50
+                echo "=== LOGS DO CONTAINER ==="
+                docker logs sonarqube-temp --tail 100
                 exit 1
               fi
 
-              # Testar API
-              if curl -s --connect-timeout 5 --max-time 10 "http://localhost:$SONAR_PORT/api/system/status" 2>/dev/null | grep -q '"status":"UP"'; then
-                echo "✅ SonarQube pronto na porta $SONAR_PORT! ($i/$TIMEOUT)"
-                sleep 15
-                
-                # Confirmação final
-                if curl -s "http://localhost:$SONAR_PORT/api/system/status" 2>/dev/null | grep -q '"status":"UP"'; then
-                  echo "✅ SonarQube totalmente operacional!"
-                  exit 0
+              # Verificar logs em busca de erros críticos
+              LOGS=$(docker logs sonarqube-temp --tail 10 2>&1)
+              if echo "$LOGS" | grep -q "ElasticsearchException\|OutOfMemoryError\|Connection refused"; then
+                echo "⚠️  Detectado erro nos logs (tentativa $i/$TIMEOUT)"
+                if [ $i -gt 60 ]; then  # Só falha após 5 minutos
+                  echo "❌ Erro persistente detectado"
+                  docker logs sonarqube-temp --tail 50
+                  exit 1
                 fi
               fi
+
+              # Testar API de status
+              STATUS_RESPONSE=$(curl -s --connect-timeout 10 --max-time 15 "http://localhost:$SONAR_PORT/api/system/status" 2>/dev/null || echo "")
               
-              if [ $((i % 10)) -eq 0 ]; then
-                echo "Aguardando... ($i/$TIMEOUT)"
-                docker ps --filter name=sonarqube-temp --format 'table {{.Names}}\t{{.Status}}'
+              if echo "$STATUS_RESPONSE" | grep -q '"status":"UP"'; then
+                echo "✅ SonarQube respondendo na porta $SONAR_PORT!"
+                
+                # Aguardar estabilização completa
+                echo "Aguardando estabilização completa..."
+                sleep 30
+                
+                # Verificação final de saúde
+                HEALTH_CHECK=$(curl -s --connect-timeout 5 --max-time 10 "http://localhost:$SONAR_PORT/api/system/health" 2>/dev/null || echo "")
+                if echo "$HEALTH_CHECK" | grep -q '"health":"GREEN"\|"health":"YELLOW"'; then
+                  echo "✅ SonarQube totalmente operacional e saudável!"
+                  exit 0
+                fi
+                
+                # Mesmo sem health GREEN, se status UP funciona
+                echo "✅ SonarQube operacional (status UP confirmado)!"
+                exit 0
               fi
+              
+              # Log de progresso a cada 30 segundos
+              if [ $((i % 6)) -eq 0 ]; then
+                echo "Aguardando SonarQube... ($((i*5))/${TIMEOUT}s)"
+                echo "Status atual do container:"
+                docker ps --filter name=sonarqube-temp --format 'table {{.Names}}\t{{.Status}}'
+                echo "Últimas linhas do log:"
+                docker logs sonarqube-temp --tail 3 2>/dev/null || echo "Sem logs disponíveis"
+              fi
+              
               sleep 5
             done
             
-            echo "❌ Timeout esperando SonarQube"
+            echo "❌ Timeout esperando SonarQube ($((TIMEOUT*5)) segundos)"
+            echo "=== LOGS FINAIS ==="
             docker logs sonarqube-temp --tail 100
+            echo "=== STATUS DO SISTEMA ==="
+            free -h
+            df -h
             exit 1
           EOF
 
@@ -147,91 +203,147 @@ jobs:
 
       - run: npm install -g sonarqube-scanner
 
-      - name: Verificação final antes da análise
+      - name: Verificação final e aguardar estabilização
         run: |
-          echo "Verificando SonarQube na porta $SONAR_PORT..."
-          for i in {1..5}; do
-            STATUS=$(curl -s --connect-timeout 10 --max-time 15 "http://${{ secrets.SERVER_HOST }}:$SONAR_PORT/api/system/status" 2>/dev/null | jq -r '.status' 2>/dev/null || echo "DOWN")
-            if [ "$STATUS" == "UP" ]; then
-              echo "✅ SonarQube confirmado como pronto!"
+          echo "=== VERIFICAÇÃO FINAL ==="
+          SONAR_HOST_URL="http://${{ secrets.SERVER_HOST }}:$SONAR_PORT"
+          
+          # Aguardar estabilização adicional
+          sleep 45
+          
+          for i in {1..10}; do
+            echo "Verificação $i/10: Testando $SONAR_HOST_URL"
+            
+            # Testar conectividade básica
+            STATUS_CODE=$(curl -s -o /dev/null -w "%{http_code}" --connect-timeout 15 --max-time 20 "$SONAR_HOST_URL" 2>/dev/null || echo "000")
+            echo "HTTP Status: $STATUS_CODE"
+            
+            # Testar API de status
+            STATUS_RESPONSE=$(curl -s --connect-timeout 15 --max-time 20 "$SONAR_HOST_URL/api/system/status" 2>/dev/null || echo "")
+            echo "API Response: $STATUS_RESPONSE"
+            
+            if echo "$STATUS_RESPONSE" | grep -q '"status":"UP"'; then
+              echo "✅ SonarQube confirmado como pronto e operacional!"
               break
             fi
-            echo "Aguardando confirmação... ($i/5)"
-            sleep 10
+            
+            if [ $i -eq 10 ]; then
+              echo "❌ SonarQube não respondeu adequadamente após verificações"
+              exit 1
+            fi
+            
+            echo "Aguardando mais um pouco..."
+            sleep 30
           done
 
-      - name: Rodar análise SonarQube
+      - name: Executar análise SonarQube
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
           SONAR_HOST_URL="http://${{ secrets.SERVER_HOST }}:$SONAR_PORT"
-          echo "Executando análise em: $SONAR_HOST_URL"
+          echo "=== INICIANDO ANÁLISE SONARQUBE ==="
+          echo "URL: $SONAR_HOST_URL"
+          echo "Projeto: gerenciador-tarefas"
           
-          sonar-scanner \
+          # Executar análise com timeout maior
+          timeout 900 sonar-scanner \
             -Dsonar.projectKey=gerenciador-tarefas \
             -Dsonar.projectName="Gerenciador de Tarefas" \
             -Dsonar.projectVersion=1.0 \
             -Dsonar.sources=. \
             -Dsonar.host.url=$SONAR_HOST_URL \
             -Dsonar.login=$SONAR_TOKEN \
-            -Dsonar.exclusions=**/node_modules/**,**/*.log,front-end/styles.css,**/*.md,**/*.txt,**/*.json \
+            -Dsonar.exclusions=**/node_modules/**,**/*.log,front-end/styles.css,**/*.md,**/*.txt,**/*.json,**/.git/**,**/dist/**,**/build/** \
+            -Dsonar.inclusions=**/*.js,**/*.html,**/*.css \
             -Dsonar.sourceEncoding=UTF-8 \
             -Dsonar.scm.provider=git \
-            -Dsonar.verbose=false
+            -Dsonar.language=js \
+            -Dsonar.verbose=true \
+            -Dsonar.log.level=DEBUG
 
       - name: Verificar Quality Gate
         run: |
-          echo "Aguardando processamento da análise..."
-          sleep 30
+          echo "=== VERIFICAÇÃO DO QUALITY GATE ==="
+          echo "Aguardando processamento completo da análise..."
+          sleep 60
           
-          for i in {1..15}; do
-            RESPONSE=$(curl -s -u ${{ secrets.SONAR_TOKEN }}: "http://${{ secrets.SERVER_HOST }}:$SONAR_PORT/api/qualitygates/project_status?projectKey=gerenciador-tarefas" 2>/dev/null || echo '{"projectStatus":{"status":"PENDING"}}')
+          SONAR_HOST_URL="http://${{ secrets.SERVER_HOST }}:$SONAR_PORT"
+          
+          for i in {1..20}; do
+            echo "Tentativa $i/20: Consultando Quality Gate..."
+            
+            RESPONSE=$(curl -s --connect-timeout 15 --max-time 20 \
+              -u ${{ secrets.SONAR_TOKEN }}: \
+              "$SONAR_HOST_URL/api/qualitygates/project_status?projectKey=gerenciador-tarefas" \
+              2>/dev/null || echo '{"projectStatus":{"status":"PENDING"}}')
+            
+            echo "Resposta da API: $RESPONSE"
+            
             STATUS=$(echo "$RESPONSE" | jq -r '.projectStatus.status' 2>/dev/null || echo "PENDING")
+            echo "Status atual: $STATUS"
             
-            echo "Tentativa $i/15: Quality Gate = $STATUS"
+            case "$STATUS" in
+              "OK")
+                echo "✅ Quality Gate passou com sucesso!"
+                exit 0
+                ;;
+              "ERROR")
+                echo "❌ Quality Gate falhou!"
+                echo "Detalhes do erro:"
+                echo "$RESPONSE" | jq '.' 2>/dev/null || echo "$RESPONSE"
+                exit 1
+                ;;
+              "NONE")
+                echo "⚠️  Quality Gate não configurado - continuando deploy..."
+                exit 0
+                ;;
+              "PENDING"|"IN_PROGRESS")
+                echo "⏳ Análise ainda em processamento..."
+                ;;
+              *)
+                echo "⚠️  Status inesperado: $STATUS"
+                ;;
+            esac
             
-            if [ "$STATUS" == "OK" ]; then
-              echo "✅ Quality Gate passou!"
-              exit 0
-            elif [ "$STATUS" == "ERROR" ]; then
-              echo "❌ Quality Gate falhou!"
-              echo "$RESPONSE" | jq '.' 2>/dev/null || echo "$RESPONSE"
-              exit 1
-            elif [ "$STATUS" == "NONE" ]; then
-              echo "⚠️  Quality Gate não configurado - continuando..."
-              exit 0
-            else
-              echo "Aguardando análise concluir..."
-              sleep 20
+            if [ $i -lt 20 ]; then
+              echo "Aguardando próxima verificação..."
+              sleep 30
             fi
           done
-          echo "❌ Timeout aguardando Quality Gate"
+          
+          echo "❌ Timeout aguardando Quality Gate (10 minutos)"
+          echo "Última resposta recebida: $RESPONSE"
           exit 1
 
       - name: Limpar SonarQube temporário
         if: always()
         run: |
           ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} << 'EOF'
-            echo "Limpando SonarQube temporário..."
+            echo "=== LIMPEZA DO SONARQUBE TEMPORÁRIO ==="
             docker stop sonarqube-temp 2>/dev/null || true
             docker rm sonarqube-temp 2>/dev/null || true
             docker volume rm sonarqube_temp_data sonarqube_temp_logs sonarqube_temp_extensions 2>/dev/null || true
             rm -f /tmp/sonar_port.env
-            echo "✅ Limpeza concluída"
+            echo "✅ Limpeza concluída com sucesso"
           EOF
 
       - name: Deploy no servidor remoto
         run: |
           ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} 'bash -s' << 'EOF'
-          echo "Iniciando deploy da aplicação..."
+          echo "=== INICIANDO DEPLOY DA APLICAÇÃO ==="
           
+          # Parar aplicação atual
           docker-compose -f /home/aluno/gerenciador-tarefas/docker-compose.yml down || true
           docker rmi willmonteiro/gerenciador-tarefas:01 || true
           docker rmi willmonteiro/gerenciador-tarefas:latest || true
 
+          # Preparar diretório
           mkdir -p /home/aluno/gerenciador-tarefas
+          
+          # Baixar nova imagem
           docker pull willmonteiro/gerenciador-tarefas:01
 
+          # Criar docker-compose.yml
           cat > /home/aluno/gerenciador-tarefas/docker-compose.yml << 'DOCKERCOMPOSE'
           version: '3.8'
 
@@ -287,32 +399,58 @@ jobs:
               driver: bridge
           DOCKERCOMPOSE
 
+          # Iniciar aplicação
           cd /home/aluno/gerenciador-tarefas
           docker-compose up -d
-          echo "✅ Deploy concluído!"
+          
+          echo "✅ Deploy da aplicação concluído!"
+          echo "Verificando status dos containers..."
+          docker-compose ps
           EOF
 
       - name: Verificar aplicação online
         run: |
-          echo "Aguardando aplicação inicializar..."
-          sleep 30
+          echo "=== VERIFICAÇÃO FINAL DA APLICAÇÃO ==="
+          echo "Aguardando aplicação inicializar completamente..."
+          sleep 45
           
-          for i in {1..10}; do
-            STATUS=$(curl -s -o /dev/null -w "%{http_code}" --connect-timeout 10 --max-time 15 "http://${{ secrets.SERVER_HOST }}:3001" || echo "000")
-            echo "Tentativa $i/10: HTTP $STATUS"
+          for i in {1..12}; do
+            echo "Verificação $i/12..."
             
-            if [ "$STATUS" = "200" ] || [ "$STATUS" = "302" ] || [ "$STATUS" = "301" ]; then
-              echo "✅ Aplicação online!"
-              echo "🌐 http://${{ secrets.SERVER_HOST }}:3001"
-              exit 0
+            STATUS=$(curl -s -o /dev/null -w "%{http_code}" \
+              --connect-timeout 15 --max-time 20 \
+              "http://${{ secrets.SERVER_HOST }}:3001" || echo "000")
+            
+            echo "HTTP Status: $STATUS"
+            
+            case "$STATUS" in
+              "200"|"302"|"301")
+                echo "✅ Aplicação está online e funcionando!"
+                echo "🌐 Acesse em: http://${{ secrets.SERVER_HOST }}:3001"
+                exit 0
+                ;;
+              "000")
+                echo "⚠️  Sem resposta da aplicação"
+                ;;
+              *)
+                echo "⚠️  Status HTTP inesperado: $STATUS"
+                ;;
+            esac
+            
+            if [ $i -lt 12 ]; then
+              echo "Aguardando próxima verificação..."
+              sleep 20
             fi
-            
-            sleep 15
           done
           
-          echo "❌ Aplicação não respondeu"
+          echo "❌ Aplicação não respondeu adequadamente"
+          echo "=== DIAGNÓSTICO ==="
           ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} << 'EOF'
+            echo "Status dos containers:"
             docker-compose -f /home/aluno/gerenciador-tarefas/docker-compose.yml ps
-            docker-compose -f /home/aluno/gerenciador-tarefas/docker-compose.yml logs --tail 20 app
+            echo -e "\n=== LOGS DA APLICAÇÃO ==="
+            docker-compose -f /home/aluno/gerenciador-tarefas/docker-compose.yml logs --tail 30 app
+            echo -e "\n=== LOGS DO BANCO ==="
+            docker-compose -f /home/aluno/gerenciador-tarefas/docker-compose.yml logs --tail 10 db
           EOF
           exit 1
