--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,22 +6,16 @@ sonar.projectVersion=1.0
 # Diretório base do código fonte
 sonar.sources=.
 
-# Ignorar arquivos/pastas desnecessários (mais abrangente)
-sonar.exclusions=**/node_modules/**,**/*.log,**/*.md,**/*.txt,**/*.json,**/.git/**,**/dist/**,**/build/**,**/coverage/**,**/*.min.js,**/*.bundle.js
+# Ignorar arquivos/pastas desnecessários
+sonar.exclusions=**/node_modules/**,**/*.log,**/*.md,**/*.txt,**/*.json,**/.git/**,**/dist/**,**/build/**,**/coverage/**,**/*.min.js,**/*.bundle.js,**/vendor/**
 
 # Incluir apenas arquivos de código fonte relevantes
 sonar.inclusions=**/*.js,**/*.html,**/*.css
 
-# URL do SonarQube (será sobrescrita pelo workflow)
-sonar.host.url=http://localhost:9000
-
-# Token de autenticação (será sobrescrito pelo workflow)
-sonar.login=your-token-here
-
 # Codificação dos arquivos fonte
 sonar.sourceEncoding=UTF-8
 
-# Configurações de qualidade mais flexíveis
+# Configurações de qualidade mais flexíveis para desenvolvimento
 sonar.qualitygate.wait=false
 
 # Configurações de SCM
@@ -32,8 +26,14 @@ sonar.scm.forceReloadAll=false
 sonar.javascript.lcov.reportPaths=**/coverage/lcov.info
 sonar.javascript.exclusions=**/node_modules/**,**/vendor/**,**/*.min.js
 
-# Desabilitar regras muito rígidas para projetos pequenos
-sonar.issue.ignore.multicriteria=e1,e2,e3,e4
+# Configurações de timeout mais flexíveis
+sonar.ws.timeout=300
+
+# Configurações para projetos pequenos/médios
+sonar.scanner.maxHeap=1024m
+
+# Desabilitar regras muito rígidas para projetos em desenvolvimento
+sonar.issue.ignore.multicriteria=e1,e2,e3,e4,e5
 sonar.issue.ignore.multicriteria.e1.ruleKey=javascript:S1481
 sonar.issue.ignore.multicriteria.e1.resourceKey=**/*.js
 sonar.issue.ignore.multicriteria.e2.ruleKey=javascript:S125
@@ -42,9 +42,12 @@ sonar.issue.ignore.multicriteria.e3.ruleKey=javascript:S3776
 sonar.issue.ignore.multicriteria.e3.resourceKey=**/*.js
 sonar.issue.ignore.multicriteria.e4.ruleKey=javascript:S1192
 sonar.issue.ignore.multicriteria.e4.resourceKey=**/*.js
+sonar.issue.ignore.multicriteria.e5.ruleKey=javascript:S1854
+sonar.issue.ignore.multicriteria.e5.resourceKey=**/*.js
 
 # Configurações para reduzir falsos positivos
 sonar.javascript.globals=window,document,console,require,module,exports,process,global,Buffer,__dirname,__filename
 
-# Configurações de timeout mais flexíveis
-sonar.ws.timeout=300
+# Configurações de logging menos verbosas
+sonar.verbose=false
+sonar.log.level=INFO
