--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -32,6 +32,10 @@ sonar.ws.timeout=300
 # Configurações para projetos pequenos/médios
 sonar.scanner.maxHeap=1024m
 
+# Configurações de memória para Elasticsearch/Search
+sonar.search.javaOpts=-Xms512m -Xmx1024m
+sonar.search.javaAdditionalOpts=-XX:+HeapDumpOnOutOfMemoryError
+
 # Desabilitar regras muito rígidas para projetos em desenvolvimento
 sonar.issue.ignore.multicriteria=e1,e2,e3,e4,e5
 sonar.issue.ignore.multicriteria.e1.ruleKey=javascript:S1481
